--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.15",
     "expo-linear-gradient": "^12.5.0",
     "expo-status-bar": "~1.6.0",
